checkbox alignment fixed

--- a/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
+++ b/skin/frontend/base/default/css/TIG/Buckaroo3Extended/styles_opc.css
@@ -34,3 +34,25 @@
 #checkout-step-payment #paymentguarantee_terms_and_conditions a.button { text-decoration:none !important; cursor:pointer !important; background:none !important; }
 #checkout-step-payment #paymentguarantee_terms_and_conditions a.button span { display:block; height:19px; border:1px solid #de5400; background:#f18200; padding:0 8px; font:bold 12px/19px Arial, Helvetica, sans-serif; text-align:center; white-space:nowrap; color:#fff; }
 #checkout-step-payment #paymentguarantee_terms_and_conditions a.button span span { border:0; padding:0; }
+
+
+/* Afterpay + Payment guarantee - terms and conditions - align with checkbox */
+
+.sp-methods .form-list li {
+    clear: both;
+}
+
+#checkout-step-payment .buckaroo-method .tac-accept .input-box{
+    float: left !important;
+    width: auto;
+}
+
+#checkout-step-payment .buckaroo-method .tac-accept .input-box input {
+    width: 25px;
+    vertical-align: text-top;
+    margin-top: 2px;
+}
+
+#checkout-step-payment .buckaroo-method .tac-accept .input-box:after {
+    clear:none;
+}
